# fut

./: .coveragerc  .git_ignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  dash_dataframes.py  dash_flashback.py  dash_groupedplayers_dataframe.csv  dash_pgp.py  database_build.ipynb  db_functions.py  demon.py  market_analysis.ipynb  pyproject.toml  requirements.txt  run.py  time_series.ipynb
DB Update/: db_functions.py  update_full.py
TS/: data_processing.ipynb
database/: Untitled.ipynb  database_build.ipynb  update.py  update_full.py
fut/: client.py  constants.py  helpers.py  log.py  model_evaluation.ipynb  player.py  preprocessing.py  scraper.py  train.py  update.py  utils.py
fut/old/: evaluation.py  prediction.py
models/: attr_ct.joblib  en.joblib  model.joblib  nn.joblib  price_scaler.joblib  rf.joblib  temp_scaler.joblib
models/old/: en.joblib  nn.joblib
modules/: config.py  constants.py  evaluation.py  prediction.py  preprocessing.py  train.py  update.py
price/: demon.ipynb
pricey/: config.py  demon.ipynb  gathering.py  prediction.py  preprocessing.py  process.py  sophie.ipynb  sophie_config.py  sophie_prep.ipynb  sophie_preparation.py  sophiez.ipynb
tests/: conftest.py  constants.py  test_player.py
